Update GetAuctions endpoint
